setting up project, profile list and creating a profile working

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Life Counter
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-row col-6 offset-3 center>
+    <button ion-button full>Match set up</button>
+    <button ion-button full (click)="goToProfiles()">Profiles</button>
+  </ion-row>
 </ion-content>
