Adding creating match functionality, integrated ionic-storage instead of localStorage

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
 
 <ion-content padding>
   <ion-row col-6 offset-3 center>
-    <button ion-button full>Match set up</button>
+    <button ion-button full (click)="goToCreateMatch()">Match set up</button>
     <button ion-button full (click)="goToProfiles()">Profiles</button>
   </ion-row>
 </ion-content>
