--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="background">
   <ion-row col-6 offset-3 center>
     <button ion-button full (click)="goToCreateMatch()">Match set up</button>
     <button ion-button full (click)="goToProfiles()">Profiles</button>
