--- a/src/pages/profiles/profiles.html
+++ b/src/pages/profiles/profiles.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="background">
   <ion-list *ngIf="profiles.length > 0">
     <ion-item *ngFor="let profile of profiles"
               color="{{profile.Theme}}"
