--- a/src/pages/match/match.html
+++ b/src/pages/match/match.html
@@ -4,40 +4,52 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
-  <ion-navbar>
-    <ion-title>Match</ion-title>
-  </ion-navbar>
+<ion-content padding class="background" style="padding-top:0px !important">
 
-</ion-header>
-
-
-<ion-content padding>
-  <div class="row sideways">
-    <ion-item *ngFor="let player of topRowPlayers" class="matchPlayerView" color="{{player.Life > 0 ? player.Theme : 'disabled'}}" no-lines [style.width.%]="topWidth">
-      <h2>{{player.Name}}</h2>
-
-      <div item-content *ngIf="player.Life > 0">
-        <h3><b>Life: {{player.Life}}</b></h3>
-        <button block ion-button color="secondary" (click)="addOneLife(player)" (press)="addOneLife(player)"><ion-icon large name="add"></ion-icon></button>
-        <button block ion-button color="danger" (click)="removeOneLife(player)" (press)="removeOneLife(player)"><ion-icon large name="remove"></ion-icon></button>
+  <div class="row sideways" style="height:50%">
+    <ion-item *ngFor="let player of topRowPlayers" color="{{player.Theme}}" no-lines [style.width.%]="topWidth">
+      <button ion-button style="float:right" large inline-block class="translucentBtn" (click)="addOneLife(player)"><ion-icon name="add"></ion-icon></button>
+      <div class="center playerInfo">
+        <h3><b>{{player.Name}}</b></h3>
+        <h4><b>Life: {{player.Life}}</b></h4>
       </div>
+      <button ion-button style="float:left" large inline-block class="translucentBtn" (click)="removeOneLife(player)"><ion-icon name="remove"></ion-icon></button>
     </ion-item>
   </div>
-  <div class="row">
-    <ion-item *ngFor="let player of bottomRowPlayers" class="matchPlayerView" color="{{player.Life > 0 ? player.Theme : 'disabled'}}" no-lines [style.width.%]="bottomWidth">
-      <h2>{{player.Name}}</h2>
-
-      <div item-content *ngIf="player.Life > 0">
-        <h3><b>Life: {{player.Life}}</b></h3>
-        <button block ion-button color="secondary" (click)="addOneLife(player)" (press)="addOneLife(player)"><ion-icon large name="add"></ion-icon></button>
-        <button block ion-button color="danger" (click)="removeOneLife(player)" (press)="removeOneLife(player)"><ion-icon large name="remove"></ion-icon></button>
+  <div class="centerHomeButton">
+    <button ion-button color="light" (click)="goBack()"><ion-icon name="home"></ion-icon></button>
+  </div>
+  <div class="row" style="height:50%">
+    <ion-item *ngFor="let player of bottomRowPlayers" color="{{player.Theme}}" no-lines [style.width.%]="bottomWidth">
+      <button ion-button style="float:right" large inline-block class="translucentBtn" (click)="addOneLife(player)"><ion-icon name="add"></ion-icon></button>
+      <div class="center playerInfo">
+        <h3><b>{{player.Name}}</b></h3>
+        <h4><b>Life: {{player.Life}}</b></h4>
       </div>
+      <button ion-button style="float:left" large inline-block class="translucentBtn" (click)="removeOneLife(player)"><ion-icon name="remove"></ion-icon></button>
     </ion-item>
   </div>
-  <div *ngFor="let player of matchData.Players" class="center">
-    
-  </div>
-  
+
+  <!--
+   <div class="row sideways" style="height:50%">
+     <ion-item *ngFor="let player of topRowPlayers" class="matchPlayerView center" color="{{player.Life > 0 ? player.Theme : 'disabled'}}" [style.width.%]="topWidth">
+       <button item-start inline-block class="translucentBtn" (click)="removeOneLife(player)" (press)="removeOneLife(player)"><ion-icon large name="remove"></ion-icon></button>
+       <h2>{{player.Name}}</h2>
+       <h3 *ngIf="player.Life > 0"><b>Life: {{player.Life}}</b></h3>
+       <button item-end inline-block class="translucentBtn" (click)="addOneLife(player)" (press)="addOneLife(player)"><ion-icon large name="add"></ion-icon></button>
+     </ion-item>
+   </div>
+
+   <div class="row" style="height:50%">
+     <ion-item *ngFor="let player of bottomRowPlayers" class="matchPlayerView center" color="{{player.Life > 0 ? player.Theme : 'disabled'}}" no-lines [style.width.%]="bottomWidth">
+       <button item-start class="translucentBtn" (click)="removeOneLife(player)" (press)="removeOneLife(player)"><ion-icon large name="remove"></ion-icon></button>
+       <h2>{{player.Name}}</h2>
+       <h3 *ngIf="player.Life > 0"><b>Life: {{player.Life}}</b></h3>
+       <button item-end class="translucentBtn" (click)="addOneLife(player)" (press)="addOneLife(player)"><ion-icon large name="add"></ion-icon></button>
+     </ion-item>
+   </div>
+  -->
+
+
 </ion-content>
