--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
+    <ion-title class="center">
       Life Counter
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding class="background">
-  <ion-row col-6 offset-3 center>
-    <button ion-button full (click)="goToCreateMatch()">Match set up</button>
-    <button ion-button full (click)="goToProfiles()">Profiles</button>
-  </ion-row>
+  <div class="center screenCenter">
+    <button ion-button large round (click)="goToCreateMatch()">Match set up</button>
+    <button ion-button large round (click)="goToProfiles()">Profiles</button>
+  </div>
 </ion-content>
